# Linux-Skyrim-Mod-Manager

./: Cargo.toml  LICENSE  README.md  cli.rs  game.rs  gui.rs
src/: app_paths.rs  backup.rs  bsa.rs  check.rs  color.rs  config.rs  fomod.rs  game.rs  ini.rs  lib.rs  nxm.rs  prefix.rs  profile.rs  saves.rs  store.rs  validate.rs
src/vfs/: linux.rs  mod.rs  windows.rs
